# gtk

demos/gtk-demo/: meson.build
docs/reference/gtk/images/: aboutdialog.ui  meson.build  style.css
gdk/win32/: gdkevents-win32.c
gtk/: meson.build
